# IFCO

./: .pre-commit-config.yaml  README.md  docker-compose.yml  dockerfile  pyproject.toml  run.py
src/: bronze.py  gold.py  silver.py
src/utils/: data_loader.py
tests/: test_bronze.py  test_gold.py  test_silver.py
