[tool.poetry]
name = "de-test"
version = "0.1.0"
description = ""
authors = ["Daniel Diaz <ddiazkne@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pyspark = "^3.1.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
pytest-spark = "^0.6.0"
pre-commit = "^2.12"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
